@@ -1,0 +1,27 @@
+m
+150 670 50
+m
+250 710 50
+m
+350 720 50
+m
+450 700 50
+m
+550 650 50
+m
+650 570 50
+m
+750 460 50
+m
+850 320 50
+m
+950 150 50
+m
+1050 100 50
+m
+1150 270 50
+m
+1250 410 50
+v
+g
+pic.png
