@@ -1,6 +1,9 @@
 CHANGELOG
 =========
 
+04/20/15
+[graphics.cpp] Backface culling algorithm implemented.
+
 04/12/15
 [mesh.cpp] Sphere wireframe finalized.
 [matrix.cpp] Undo change to insert(), +z is now out of the page. (This change causes errors with hermite and bezier curves.)
